--- a/doc/motif.texi
+++ b/doc/motif.texi
@@ -60,6 +60,7 @@ that Oleo depends on :
 @itemize @bullet
 @item Xbae widgets
 @url{http://xbae.syd.net.au}
+@url{ftp://ftp.x.org/contrib/widgets/motif/Xbae-4.6.2.tar.gz}
 @item XmHTML
 @url{http://www.xs4all.nl/~ripley/XmHTML}
 @item GNU plotutils
@@ -68,6 +69,8 @@ that Oleo depends on :
 @url{http://www.opengroup.org}
 @url{http://www.lesstif.org}
 @item GNU gettext
+@url{http://www.gnu.org}
+@item GNU texinfo (3.12 or later)
 @url{http://www.gnu.org}
 @end itemize
 
