--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
+Danny Backx <danny@gnu.org> is adding a LessTif (Motif) user interface,
+and miscellaneous code maintenance, starting August 1998.
+
 June 1/97 - Jeff Bailey takes over maintainership of Oleo.  
 
 Thanks to Tom Lord, and many others who have contributed to Oleo over the 
 years.  It's on the TODO list to add your names into here!
-
-Danny Backx <danny@gnu.org> is adding a LessTif (Motif) user interface,
-starting August 1998.
