--- a/doc/basics.texi
+++ b/doc/basics.texi
@@ -667,6 +667,19 @@ Describe these options
 do not read the file @file{.oleorc} on startup
 @item --nw
 do not use X-windows
+@item -F x
+@itemx --format x
+set the default file type to x (oleo, list, sc, ...)
+@itemx --filter
+stdin/stdout are used for reading and writing the spreadsheet
+Note this only works well for X Window System user interfaces,
+or in very specific circumstances.
+@item -s x
+@itemx --separator x
+set separator for 'list' file type to x
+@item -S
+@itemx --space
+set separator for 'list' file type to a space
 @end table
 
 
