Frank Bennett added himself to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
+Frank Bennett <bennett@nomolog.nagoya-u.ac.jp> is helping out with
+the testing and documentation of releases, starting February 1999.
+
 Danny Backx <danny@gnu.org> is adding a LessTif (Motif) user interface,
 and miscellaneous code maintenance, starting August 1998.
 
