--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# , fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GNU oleo 1.6.7\n"
@@ -14,13 +14,13 @@ msgstr ""
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
+# , c-format
 #: src/io-term.c:690
-#, c-format
 msgid "Usage: %s [OPTION]... [FILE]...\n"
 msgstr "Gebruik: %s [OPTION]... [FILE]...\n"
 
+# , fuzzy
 #: src/io-term.c:693
-#, fuzzy
 msgid ""
 "\n"
 "  -h, --help               display this help and exit\n"
@@ -46,8 +46,8 @@ msgstr ""
 "\n"
 "Rapporteer eventuele fouten in oleo via een mailtje aan <bug-oleo@gnu.org>.\n"
 
+# , c-format
 #: src/io-term.c:762
-#, c-format
 msgid "%s %s\n"
 msgstr ""
 
@@ -55,13 +55,13 @@ msgstr ""
 msgid "Copyright (C) 1997-1998 Free Software Foundation, Inc.\n"
 msgstr ""
 
+# , c-format
 #: src/io-term.c:764
-#, c-format
 msgid "%s comes with ABSOLUTELY NO WARRANTY.\n"
 msgstr ""
 
+# , c-format
 #: src/io-term.c:765
-#, c-format
 msgid "You may redistribute copies of %s\n"
 msgstr ""
 
@@ -77,8 +77,8 @@ msgstr ""
 msgid "see the files named COPYING.\n"
 msgstr ""
 
+# , c-format
 #: src/io-motif.c:627
-#, c-format
 msgid "Conversion error: cannot convert '%s' to a %s\n"
 msgstr "Conversie-fout: kan '%s' niet converteren naar een %s\n"
 
@@ -88,10 +88,7 @@ msgstr ""
 "Interne fout\n"
 "Ik kan XmNuserData niet vinden.\n"
 
-#: src/io-motif.c:679 src/io-motif.c:699 src/io-motif.c:826
-#: src/io-motif.c:2027 src/io-motif.c:2036 src/io-motif.c:2072
-#: src/io-motif.c:2081 src/io-motif.c:2116 src/io-motif.c:2125
-#: src/io-motif.c:2348
+#: src/io-motif.c:679 src/io-motif.c:699 src/io-motif.c:826 src/io-motif.c:2027 src/io-motif.c:2036 src/io-motif.c:2072 src/io-motif.c:2081 src/io-motif.c:2116 src/io-motif.c:2125 src/io-motif.c:2348
 msgid "range"
 msgstr "bereik"
 
@@ -99,14 +96,14 @@ msgstr "bereik"
 msgid "File Format"
 msgstr "Bestandsformaat"
 
+# , c-format
 #. enough
 #: src/io-motif.c:1383
-#, c-format
 msgid "[Oleo: %s]"
 msgstr "[Oleo: %s]"
 
+# , c-format
 #: src/io-motif.c:1455
-#, c-format
 msgid "Read file '%s'\n"
 msgstr "Bestand '%s' is gelezen\n"
 
@@ -118,18 +115,18 @@ msgstr ""
 msgid "Choose a file to load"
 msgstr ""
 
+# , c-format
 #: src/io-motif.c:1514
-#, c-format
 msgid "OleoOpenForWrite: can't move %s to %s"
 msgstr ""
 
+# , c-format
 #: src/io-motif.c:1526
-#, c-format
 msgid "OleoOpenForWrite: couldn't open file '%s' for write"
 msgstr ""
 
+# , c-format
 #: src/io-motif.c:1542
-#, c-format
 msgid "ReallySaveCB(%s): couldn't open file for writing"
 msgstr ""
 
@@ -138,8 +135,8 @@ msgstr ""
 msgid "ReallySaveCB: file close failed"
 msgstr ""
 
+# , c-format
 #: src/io-motif.c:1556
-#, c-format
 msgid "Saved file '%s'\n"
 msgstr "Bestand '%s' is geschreven\n"
 
@@ -159,8 +156,8 @@ msgstr ""
 "<html><body>Ik kan het gevraagde help-bestand niet vinden.\n"
 "</body></html>"
 
+# , c-format
 #: src/io-motif.c:1754
-#, c-format
 msgid "Help requested on '%s'"
 msgstr ""
 
@@ -206,9 +203,9 @@ msgstr ""
 msgid "Graph"
 msgstr ""
 
+# , fuzzy
 #. FMT_GPH
 #: src/io-motif.c:2241
-#, fuzzy
 msgid "Float"
 msgstr "Bestandsformaat"
 
@@ -274,23 +271,3 @@ msgid ""
 "There are unsaved changes.\n"
 "Do you want to quit anyway ?"
 msgstr "Sommige wijzigingen zijn nog niet bewaard.Wil je toch stoppen ?"
-
-#~ msgid "Plotting X in %d [%d.%d], A in %d [%d.%d]\n"
-#~ msgstr "Tekenen : X in %d [%d.%d], A in %d [%d.%d]\n"
-
-#~ msgid "Graph X [%s] A [%s]\n"
-#~ msgstr "Grafiek X [%s] A [%s]\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "GNU Oleo is free software, you are welcome to\n"
-#~ "distribute copies of it. See the file COPYING for the\n"
-#~ "conditions.\n"
-#~ "\n"
-#~ "GNU Oleo comes with ABSOLUTELY NO WARRANTY."
-#~ msgstr ""
-#~ "\n"
-#~ "GNU Oleo is gratis software, je mag het copiëren en verdelen.\n"
-#~ "Het bestand COPYING omschrijft daarvoor de voorwaarden.\n"
-#~ "\n"
-#~ "GNU Oleo komt ZONDER ENIGE GARANTIE."
